htdocs/theme/raw/sass/components/_modal.scss
$width: 60%;
$width-sm: 90%;


//tinymce modal
.blockinstance-as-modal {
    background: #fff;
    padding: 20px;
    border: 1px solid $modal-header-border-color;
}


.modal-loading {
    margin-top: 100px;
    text-align: center;
    width: 100%;
    @extend .icon;
    @extend .icon-spinner;
    @extend .icon-pulse;
    @extend .icon-3x;
    @extend .text-watermark;
}

.modal-tinymce,
.modal-docked {
    background: rgba(0,0,0,0.09);
    display: block;
    .modal-content {
        height: 90%;
    }
}
.modal-docked,
.page-modal {
    .modal-content {
        max-height: 100%;
    }
    .modal-body {
        @include border-bottom-radius(3px);
        max-height: 90%;
        overflow: auto;
        &.flush {
            padding: 0;
        }
        .list-group.flush {
            margin: -15px;
        }
    }
    .modal-dialog {
        height: 100%;
    }
}
.page-modal {
     .modal-content {
        overflow: hidden;
        max-height: 90%;
     }
}

.modal-content {
    border-radius: 0;
}

.modal-header,
.mce-panel .mce-window-head {
    background: $panel-default-heading-bg;
    padding: 10px 15px;
    h4, .mce-title {
        font-family: $font-family-base;
        font-weight: 300;
        font-size: 16px;
    }
    .close,
    .mce-close {
        opacity: 1;
        &:hover,
        &:focus {
            .times {
                opacity: 1;
            }
        }
        .times {
            opacity: 0.8;
            font-size: 25px;
        }
    }
}

.modal-docked {
    @include transition(visibility 0s 0.3s);
    visibility: hidden;
    position: fixed;
    top: 0px;
    right: 0px;
    bottom: 0px;

    .mce-tinymce {
        display:none;
    }

    &.active,
    &.in {
        @include transition(visibility 0s 0.2s);
        visibility: visible;
        transition: visibility 0s 0.2s;
        .modal-dialog {
            @include transition(right 0.3s ease-in-out);
            right: 0;
        }
        .mce-tinymce {
            display: block;
        }
    }
    &.closed {
        .modal-dialog {
            @include transition(right 0.5s ease-in-out);
            right: -($width + 5);
            @media (max-width: $screen-sm-min) {
                right: -($width-sm + 5);
            }
        }
    }

    .modal-dialog {
        width: $width;
        margin: 0;
        position: fixed;
        top: 0px;
        bottom: 0px;
        @media (max-width: $screen-sm-min) {
            width: ($width-sm + 5);
        }
    }

    .modal-header {
        background:  $brand-primary;
        padding: 10px 15px;
        color: #fff;
         h4, a {
            color: #fff;
        }
        .close {
           @include box-shadow(-2px 0px 2px rgba(0,0,0,0.3));
            border-radius:3px 0 0 3px;
            opacity: 1;
            position: absolute;
            top: 1px;
            left: -30px;
            padding: 10px 7px 9px;
            background: #fff;
            border: 1px solid $modal-header-border-color;
            border-right:0;

            @media (max-width: $screen-sm-min) {
                left:-22px;
                padding: 10px 4px 9px 3px;
            }
            .times {
                color: #555;
                opacity:0.4;
            }
            &:hover,
            &:focus,
            &:active {
                outline: none;

                .times {
                    opacity:0.8;
                }
            }
        }
    }
    .modal-content {
        border-radius: 0;
        border-top: 0;
        border-bottom: 0;
        height: 100% !important; //js bug gives a height (@todo track down)
    }

}

.modal .tags {
    input {
        max-width:250px;
    }
}

